# Transaction-Fraud-Detection-and-Risk-Scoring-System

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  README.md  environment.yml  pyproject.toml  requirements.baseline.txt  requirements.txt
agents/: 01_data_ingestion_agent.md  02_feature_engineering_agent.md  03_model_training_agent.md  04_api_dashboard_agent.md  05_explainability_monitoring_agent.md  06_graph_features_agent.md
api/: main.py  schemas.py
config/: config.example.yaml
dashboard/: app.py
docs/: DATASET_AND_LEAKAGE_RULES.md  DATA_VALIDATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  ML_CONCEPTS_TARGETED.md  PHASE_0_READINESS_REVIEW.md  PHASE_1_IMPLEMENTATION_PLAN.md  PROJECT_SCOPE.md  RESUME_POSITIONING.md  SYSTEM_ARCHITECTURE.md
docs/reference/: real_time_fraud_detection_system_design.md
prompts/: 00_architect_review_prompt.md  01_codex_baseline_build_prompt.md  02_claude_code_repo_build_prompt.md  03_feature_exploration_prompt.md  git.md
scripts/: extract_samples.py
src/transaction_risk_engine/: __init__.py  config.py
src/transaction_risk_engine/data/: __init__.py  load.py  schema.py  split.py
src/transaction_risk_engine/explain/: global_shap.py  shap_explainer.py
src/transaction_risk_engine/features/: base.py  build.py  frequency.py  historical.py
src/transaction_risk_engine/models/: __init__.py  baselines.py  evaluate.py  lgbm.py  (+2 more)
tests/: test_api.py  test_config.py  test_data_load.py  test_evaluate.py  test_features.py  test_historical.py  test_models.py  test_monitoring.py  test_split.py
(+3 files in other folders)
