[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-risk-engine"
version = "0.1.0"
description = "Resume-ready adaptive transaction risk engine for fraud detection demos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "joblib",
  "lightgbm",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pydantic",
  "pyyaml",
  "scikit-learn",
  "shap",
  "streamlit",
  "uvicorn",
  "xgboost",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
